src/components/Home.css
.hero {
  /* min-height: 90vh; */
}
.hero-img {
  img {
    object-fit: contain;
    width: 100%;
    height: 100%;
  }
}
.hero-img-animation-1,
.hero-img-animation-2,
.hero-img-animation-3 {
  transform: translate(-50%, 50%) rotate(-180deg);
  transition: 0.5s ease-in-out; 
}
.hero-img-animation-1.active,
.hero-img-animation-2.active,
.hero-img-animation-3.active {
  transform: translate(0, 0) ;
  transition: 0.5s ease-in-out; 
}

.hero-menu {
  height: 90vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1%;
  button {
    margin-top: 10px;
  }
}
.hero-circle-row {
  padding-top: 1em;
  gap: 1em;
}
.hero-circle {
  clip-path: circle(50% at 50% 50%);
  width: 4.2em;
  height: 4.2em;
  background: var(--m2);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  img {
    clip-path: circle(50% at 50% 50%);
    width: 4em;
    height: 4em;
  }
  .herobtn.active {
    width: 3.6em;
    height: 3.6em;
  }
}
.about {
  position: relative;
  z-index: 1;
  padding-top: 6em;
}
.about::before {
  content: " ";
  position: absolute;
  top: 0; 
  left: 0;
  width: 100%; 
  height: 100%;
  opacity: 0.1;
  background: url(https://cdn.pixabay.com/photo/2025/01/10/08/05/restaurant-9323426_960_720.jpg) no-repeat bottom;
  background-size: cover;
}
.about-img {
  clip-path: ellipse(70% 50% at 50% 50%);
  height: 700px;
  img {
    object-fit: cover;
    object-position: bottom;
    height: 100%;
    width: 100%;
  }
}
.order {
  position: relative;
}
.order-row {
  align-items: center;
  padding: 3rem 0;
  min-height: 90vh;
}
.order-img {
  border-radius: 48px;
  overflow: hidden;
  height: 70vh;
  width: 60vw;
  position: absolute;
  right: 50%;
  img {
    object-fit: cover;
    /* object-position: left bottom; */
    height: 100%;
    width: 100%;
  }
}
.testi-layout {
  justify-content: center;
  gap: 3rem;
}
.order-testi {
  text-align: center;
    margin-top: 8rem;
margin-bottom: 2rem;
}
.testi-card {
  display: flex;
  gap: 10px;
}
.testi-star svg {
  width: 20px;
  height: 20px;
  margin-right: 4px;
  fill: var(--ac1);
}
.testi-img {
  width: 100px;
  height: 100px;
  border-radius: 50%;
}
.events {
  background-color: var(--ac1);
  position: relative;
  h1 {
    color: var(--c1);
  }
  h4, p {
    color: var(--c2);
  }
  .order-row {
    padding: 1rem 0;
  }
  .order-img {
    left: 50%;
    width: 45vw;
    img {
      height: 90%;
      width: 85%;
      border-radius: 48px;
    }
  }
}
#ev-im1 {
  position: absolute;
  right: 0;
  top: 0;
  opacity: 0.7;
}
#ev-im2 {
  position: absolute;
  left: 0;
  bottom: 0;
}
.faq-wide  {
  padding: 4rem 0;
}
.faq-wide > .row {
  padding-bottom: 4rem;
  .p0 {
    margin-bottom: 12px;
  }
}
.faq-layout {
  display: flex;
  flex-direction: column;
  gap: 12px;
}
.faq-qt {
  padding: 20px;
  background-color: var(--c1);
  border-radius: 8px;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #353232;
  cursor: pointer;
  .ques, .ans {
    width: 90%;
  }
}
.ans {
  display: none;
}
.faq-qt:hover {
  align-items: flex-start;
  .ques {
    display: none;
  }
  .ans {
    display: block;
  }
  .arr {
    transform: rotate(180deg);
    transition: 0.3s ease-in;
  }
  }
  .map-container {
    height: 50vh;
    width: 100%;
    border-radius: 8px;
    overflow: hidden;
    border: 1px solid #353232;
  }
  .map {
    position: relative;
    #map-btn {
      width: auto;
      position: absolute;
      bottom: 10px;
      right: 10px;
      background: var(--c2);
      color: var(--ac1);
    }
  }
  
/* popup modal of order-layout */
.modal-container {
  background-color: rgba(0,0,0,0.4);
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 99;
  display: flex;
  align-items: center;
  justify-content: center;
}

